# src/controllers/admin.controller.js
@@ -1,6 +1,16 @@
 const { CONSTANT_MSG } = require('../config/constant_messages');
 const { adminService } = require('../services');
-const { approveByAdmin, updateHouse, deleteHouseById, getAllHouse, getHouseById } = require('../validator/validation');
+const { approveByAdmin, getPincode } = require('../validator/validation');
+
+exports.getCategory = async (req, res) => {
+    try {
+        const category = await adminService.getCategory(req.body);
+        return res.status(category.statusCode).send(category);
+    } catch (error) {
+        console.log("Error in getCategory API: ", error);
+        return res.status(500).send({ statusCode: 500, status: CONSTANT_MSG.STATUS.ERROR, message: error.message });
+    }
+};
 
 exports.approveByAdmin = async (req, res) => {
     try {
@@ -49,6 +59,17 @@ exports.getTenantBookedList = async (req, res) => {
         return res.status(tenantList.statusCode).send(tenantList);
     } catch (error) {
         console.log("Error in getTenantList API: ", error);
+        return res.status(500).send({ statusCode: 500, status: CONSTANT_MSG.STATUS.ERROR, message: error.message });
+    }
+};
+
+exports.getPincode = async (req, res) => {
+    try {
+        await getPincode.validateAsync(req.body)
+        const pincode = await adminService.getPincode(req.body);
+        return res.status(pincode.statusCode).send(pincode)
+    } catch (error) {
+        console.log("Error in Get Pincode API: ", error);
         return res.status(500).send({ statusCode: 500, status: CONSTANT_MSG.STATUS.ERROR, message: error.message });
     }
 };
